Fix modal going out of screen

--- a/components/system/window/header/header.module.scss
+++ b/components/system/window/header/header.module.scss
@@ -3,6 +3,7 @@ $unselected-color: rgb(121, 118, 118);
 .maximizeOptionModal {
   position: absolute;
   top: 20px;
+  right: 5px;
   width: 200px;
   height: 135px;
   border-radius: 6px;
